# download-mover

./: Cargo.toml  flake.nix  run.sh  script.sh
src/: .download-mover  main.rs  state.rs
