[package]
name = "download-mover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
inotify = "0.10.2"
nix = { version = "0.27.1", features = ["fs", "inotify"] }
